z-index value fixed

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,7 @@
     position: absolute;
     width: 100%;
     display: none;
+    z-index: 500;
 
     &.active {
       display: block;
